# Ookie-bot

./: Dockerfile  MANIFEST.in  README.md  ookiebot.py  pyproject.toml  requirements.txt  setup.cmd  setup.py  setup.sh
crawler/: Queries.py  SiteMatcher.py  SiteProcessor.py  Utils.py
log/: Logger.py
ookiebot/: __main__.py
ookiebot/crawler/: SiteMatcher.py  SiteProcessor.py  Utils.py
ookiebot/log/: Logger.py
