[project]
name = "ookie_bot"
version = "0.0.1"
authors = [
  { name="Conor Thompson", email="noreply@noreply.com" },
]
description = "Search engine bot webcrawler."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ConorT38/ookie-bot/"
"Bug Tracker" = "https://github.com/ConorT38/ookie-bot/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"